syntax = "proto3";

package User;

message GetPresignedUrlDto {
  optional string fileName = 1;
  string userId = 2;
}

enum UserGrpcThemePreferences {
  LIGHT = 0;
  DARK = 1;
  SYSTEM = 2; 
}

message UserCreateProfileDto {
  string authId = 1;
  string email = 2;
  string handle = 3;
}

message UserUpdateProfileDto {
  string id = 1;
  optional string dob = 2;
  optional string phoneNumber = 3;
}

message UserChangeNotificationStatusDto {
  string id = 1;
  bool notificationStatus = 2;
}

message UserChangePreferredThemeDto {
  string id = 1;
  UserGrpcThemePreferences themePerference = 2;
}

message UserChangePreferredLanguageDto {
  string id = 1;
  string language = 2;
}

message UserVerifyPhoneNumberDto {
  string id = 1;
  string phoneNumber = 2;
}

message UserFindByIdDto {
  string id = 1;
}

message UserFindByAuthIdDto {
  string authId = 1;
}

message UserUpdateByIdDto {
  string id = 1;
  optional string email = 3;
  optional string fullName = 4;
  optional string dob = 5;
}

message GetPreSignedUrlResponse {
  string response = 1;
  string fileIdentifier = 2;
}

message UserProfileCreatedResponse {
  string response = 1;
  string userId = 2;
}

message UserUpdateProfileResponse {
  string response = 1;
  string userId = 2;
}

message UserNotificationStatusChangedResponse {
  string response = 1;
  bool status = 2;
}

message UserPreferredLanguageChangedResponse {
  string response = 1;
  string language = 2;
}

message UserPreferredThemeChangedResponse {
  string response = 1;
  string theme = 2;
}

message UserPhoneNumberVerifiedResponse {
  string response = 1;
  bool verified = 2;
}

message UserPayload {
  string id = 1;
  string authUserId = 2;
  string email = 3;
  string handle = 4;
  optional string dob = 5;
  optional string phoneNumber = 6;
  bool isPhoneNumberVerified = 7;
  bool notification = 8;
  string languagePreference = 9;
  string themePreference = 10;
  string region = 11;
  bool onBoardingComplete = 12;
}

message UserFoundResponse {
  optional UserPayload user = 1;
}

message UsersFoundResponse {
  repeated UserPayload userPayload = 1;
}

message UserProfileUpdatedResponse {
  string response = 1;
  string userId = 2;
}

message Empty {}


service UserService {
  rpc getPresignedUrlForFileUpload(GetPresignedUrlDto) returns (GetPreSignedUrlResponse) {}
  rpc createProfile(UserCreateProfileDto) returns (UserProfileCreatedResponse) {}
  rpc updateProfile(UserUpdateProfileDto) returns (UserUpdateProfileResponse) {}
  rpc changeNotificationStatus(UserChangeNotificationStatusDto) returns (UserNotificationStatusChangedResponse) {}
  rpc changePreferredLanguage(UserChangePreferredLanguageDto) returns (UserPreferredLanguageChangedResponse) {}
  rpc changePreferredTheme(UserChangePreferredThemeDto) returns (UserPreferredThemeChangedResponse) {}
  rpc verifyPhoneNumber(UserVerifyPhoneNumberDto) returns (UserPhoneNumberVerifiedResponse) {}
  rpc findAllUsers(Empty) returns (UsersFoundResponse) {}
  rpc findUserByAuthId(UserFindByAuthIdDto) returns (UserFoundResponse) {}
  rpc findOneUserById(UserFindByIdDto) returns (UserFoundResponse) {}
  rpc updateUserProfileById(UserUpdateByIdDto) returns (UserProfileUpdatedResponse) {}
}