syntax = "proto3";
package Auth;

enum ProviderTransport {
  TRANSPORT_LOCAL = 0;
  TRANSPORT_GOOGLE = 1;
  TRANSPORT_GITHUB = 2;
  TRANSPORT_MICROSOFT = 3;
  TRANSPORT_APPLE = 4;
}

message AuthSignupDto {
  ProviderTransport provider = 1;
  string providerId = 2;
  string userName = 3;
  string email = 4;
  string fullName = 6;
  optional string password = 7;
  string dob = 8;
  string avatar = 9;
  optional string accessToken = 10;
  optional string refreshToken = 11;
  optional int64 iat = 12;
  optional int64 exp = 13;
  optional string coverImage = 14;
}

message AuthChangePasswordDto {
  string id = 1;
  string oldPassword = 2;
  string newPassword = 3;
}

message AuthSigninDto {
  string userName = 1;
  string password = 2;
}

message AuthDeleteUserCredentialsDto {
  string id = 1;
}

message AuthSignupResponse {
  string id = 1;
  string userName = 2;
  string email = 3;
  string fullName = 4;
  string dob = 5;
  string avatar = 6;
  optional string coverImage = 7; 
}

message AuthChangePasswordResponse {
  bool response = 1;
}

message AuthSigninResponse {
  string token = 1;
}

message AuthDeleteUserCredentialsResponse {
  string response = 1;
}

service AuthService {
  rpc signup(AuthSignupDto) returns (AuthSignupResponse) {}
  rpc signin(AuthSigninDto) returns (AuthSigninResponse) {}
  rpc changePassword(AuthChangePasswordDto) returns (AuthChangePasswordResponse) {}
  rpc deleteUserCredentials(AuthDeleteUserCredentialsDto) returns (AuthDeleteUserCredentialsResponse) {}
}